# swiftalign

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  swiftalign_demo.ipynb  train.py
.github/workflows/: ci.yml
swiftalign/: __init__.py  dashboard.py  data.py  hardware.py  model_utils.py  rewards.py  runner.py
swiftalign/trainers/: __init__.py  dpo.py  grpo.py
tests/: test_swiftalign.py
